--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ SENDER_EMAIL_ADDRESS = solaogun@softalliance.com
 CLOUD_NAME = soft-alliance
 CLOUD_API_KEY = 929429212232176
 CLOUD_API_SECRET = DyT8i_Wy0KR-v1HRS-YRvrMOvoo
+
+
+GOOGLE_SECRET = Uq]v=4JhU8E!2M.bn`KZf@6q~//KR_w{8?}f7_e#n8r{^s8ZZ[
